--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
     "save": "^2.3.1",
-    "event-stream": "3.3.4"
+    "event-stream": "3.3.4",
+    "redux-devtools-extension": "^2.13.5"
   },
   "scripts": {
     "prestart": "npm install",
-    "start": "HOST=0.0.0.0 PORT=8000 ./node_modules/.bin/react-scripts start",
+    "start": "react-scripts start",
     "pretest": "npm install",
     "test": "rm -rf ./unit.xml; CI=true TEST_REPORT_FILENAME=./unit.xml ./node_modules/.bin/react-scripts test --verbose --env=jsdom --testResultsProcessor ./node_modules/jest-junit-reporter"
   },
