--- a/package.json
+++ b/package.json
@@ -6,20 +6,21 @@
     "@material-ui/icons": "^2.0.2",
     "create-react-app": "^1.4.3",
     "eslint": "^5.4.0",
+    "event-stream": "3.3.4",
     "history": "^4.6.3",
     "jest-localstorage-mock": "^2.1.0",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.5",
+    "react-router": "^5.0.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.0.17",
     "redux": "^3.7.2",
+    "redux-devtools-extension": "^2.13.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
-    "save": "^2.3.1",
-    "event-stream": "3.3.4",
-    "redux-devtools-extension": "^2.13.5"
+    "save": "^2.3.1"
   },
   "scripts": {
     "prestart": "npm install",
